group 'nl.bioinf.cawarmerdam.compound_evolver'
version '1.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'application'
apply plugin: 'idea'
apply plugin: 'war'

// Define the main class for the application
mainClassName = 'nl.bioinf.cawarmerdam.compound_evolver.control.CompoundEvolver'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
    maven {
        url artifactory_contextUrl
        credentials {
            username = artifactory_user
            password = artifactory_password
        }
    }
    flatDir {
        dirs "libs"
    }
}

dependencies {
    providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'jstl', name: 'jstl', version: '1.2'
    compile group: 'taglibs', name: 'standard', version: '1.1.2'
    compile group: 'com.chemaxon', name: 'marvin-app', version: '17.+'
    compile group: 'com.chemaxon', name: 'jchem-main', version: '17.+'
    compile fileTree(dir: 'libs', include: ['*.jar'])
}

task install(type: Copy) {
    group 'build'
    dependsOn build
    from configurations.runtime
    into "${project.projectDir}/build/libs/lib"
}